--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -221,7 +221,16 @@
             <div class="modal-dialog modal-lg" role="document">
               <div class="modal-content">
                 <div class="modal-body">
-                    <div class="product-image"></div>
+                    <div class="product-gallery">
+                        <div class="main-image">
+                            <div>
+                                <img src="" alt="">
+                            </div>
+                        </div>
+                        <div class="sub-image">
+
+                        </div>
+                    </div>
                     <div class="product-detail-content">
                         <div class="product-id" hidden></div>
                         <h1 class="product-name"></h1>
@@ -266,7 +275,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
-    <script th:src = "@{js/main.js}"></script>
+    <script th:src = "@{/js/main.js}"></script>
 
 </body>
 </html>
