--- a/src/main/resources/templates/fragments/admin-layout.html
+++ b/src/main/resources/templates/fragments/admin-layout.html
@@ -41,7 +41,7 @@
                         </a>
                     </li>
                     <li class="nav-title">
-                        <a href="">
+                        <a th:href="@{/admin/order}">
                             <i class="fa-solid fa-cart-shopping"></i>
                             <span>Đơn hàng đã đặt</span>
                         </a>
