--- a/src/main/resources/static/css/product-detail.css
+++ b/src/main/resources/static/css/product-detail.css
@@ -12,6 +12,7 @@ input[type=number] {
     grid-template-columns: 50% 50%;
     gap: 15px;
     padding: 40px 0;
+    border-bottom: 1px solid #ccc;
 }
 
 #product-detail .product-name h1{
@@ -103,3 +104,52 @@ input[type=number] {
 .sub-image .choose img{
     opacity: 1;
 }
+
+
+.product-tabs{
+    padding-top: 30px;
+}
+
+.product-tabs table{
+    width: 100%;
+}
+
+.tab-pane{
+    border: 1px solid #ddd;
+    background-color: #fff;
+    padding: 30px;
+    border-top: none;
+}
+
+td ,th{
+    padding: .5em;
+    text-align: left;
+    border-bottom: 1px solid #ececec;
+    line-height: 1.3;
+    font-size: .9em;
+}
+
+.form-comment{
+    border: 2px solid #c30005;
+    padding: 15px 30px 30px;
+    margin-bottom: 30px;
+}
+#info-input{
+    display: grid;
+    grid-template-columns: 50% 50%;
+    gap: 15px;
+}
+label{
+    font-weight: bold;
+    display: block;
+    font-size: .9em;
+    margin-bottom: 0.4em;
+    color: #222;
+}
+
+.same-product{
+    padding: 10px 0;
+    margin-top: 30px;
+    border-top: 1px solid #ccc;
+}
+
