--- a/src/main/resources/templates/client/checkout.html
+++ b/src/main/resources/templates/client/checkout.html
@@ -21,27 +21,27 @@
                     <div class="user-input-info">
                         <div class="form-group">
                         <label for="">Tên *</label>
-                        <input type="text" name="" id="" class="form-control" placeholder=""  >
+                        <input type="text" name="" id="" class="form-control name-input" placeholder=""  >
                         </div>
                         <div class="form-group">
                             <label for="">Quốc gia *</label>
-                            <input type="text" name="" id="" class="form-control" placeholder=""  >
+                            <input type="text" name="" id="" class="form-control country-input" placeholder=""  >
                         </div>
                         <div class="form-group">
                             <label for="">Địa chỉ *</label>
-                            <input type="text" name="" id="" class="form-control" placeholder=""  >
+                            <input type="text" name="" id="" class="form-control address-input" placeholder=""  >
                         </div>
                         <div class="form-group">
                             <label for="">Email *</label>
-                            <input type="text" name="" id="" class="form-control" placeholder=""  >
+                            <input type="text" name="" id="" class="form-control email-input" placeholder=""  >
                         </div>
                         <div class="form-group">
                             <label for="">Số điện thoại *</label>
-                            <input type="text" name="" id="" class="form-control" placeholder=""  >
+                            <input type="text" name="" id="" class="form-control phone-input" placeholder=""  >
                         </div> 
                         <div class="form-group">
                             <label for="">Ghi chú đơn hàng(Tùy chọn)</label>
-                            <textarea type="text" name="" id="" class="form-control" rows="3" placeholder="Ghi chú về đơn hàng, ví dụ: thời gian hay chỉ dẫn địa điểm giao hàng chi tiết hơn."  ></textarea>
+                            <textarea type="text" name="" id="" class="form-control note-input" rows="3" ></textarea>
                         </div>
                     </div>
                 </div>
@@ -58,15 +58,15 @@
                             </tr>
                             </thead>
                             <tbody>
-                                <tr>
-                                    <td class="order-product-name">Product1</td>
-                                    <td class="order-product-totalPrice">700,000&nbsp;<span> ₫</span></td>
+                                <tr th:each = "item : ${cartItem}">
+                                    <td class="order-product-name" > <span th:text = "${item.product.name} + ' x' "></span> <span th:text = "${item.quantity}"></span></td>
+                                    <td class="order-product-totalPrice" th:text = "${item.totalPrice} + ' ' +₫"> </td>
                                 </tr>
                             </tbody>
                             <tfoot>
                                 <tr>
                                     <th>Tổng phụ</th>
-                                    <td>700,000&nbsp;<span>₫</span></td>
+                                    <td th:text = "${cart.totalPrices} + ' ' + ₫"></td>
                                 </tr>
                                 <tr>
                                     <th>Ưu đãi</th>
@@ -74,7 +74,7 @@
                                 </tr>
                                 <tr>
                                     <th>Tổng</th>
-                                    <td>700,000&nbsp; <span>₫</span></td>
+                                    <td th:text = "${cart.totalPrices}"></td>
                                 </tr>
                             </tfoot>
                     </table>
@@ -98,10 +98,29 @@
     <div th:replace = "fragments/layout::script"></div>
 
     <script>
+        
         $('.checkout-button button').click(function(){
+            let name = $('.name-input').val();
+            let email = $('.email-input').val();
+            let address = $('.address-input').val();
+            let country = $('.country-input').val();
+            let phone = $('.phone-input').val();
+            let note = $('.note-input').val();
+            
+            let req = {
+                name : name,
+                email : email,
+                address: address,
+                country : country,
+                phone : phone,
+                note : note
+            }
+        
+            let myJSON = JSON.stringify(req);
             $.ajax({
                 url: '/client/api/save-order',
                 type: 'POST',
+                data: myJSON,
                 contentType: "application/json; charset=utf-8",
                 success: function(data){
                     toastr.success("Hoàn thành thanh toán");
