--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -19,7 +19,8 @@
                 <div class="header-main">
                     <div class="flex-left">
                         <ul class="account">
-                            <li class="account-item"><button data-toggle="modal" data-target="#login_modal"><span>Đăng nhập / Đăng ký</span></button></li>
+                            <li th:if = "${session.username == null}" class="account-item"><button data-toggle="modal" data-target="#login_modal"><span>Đăng nhập / Đăng ký</span></button></li>
+                            <div th:text = "${session.username}"></div>
                         </ul>
                     </div>
                     <div class="logo">
@@ -55,6 +56,7 @@
                         <li class="bottom-nav-item"><a href="">Phụ kiện khác</a></li>
                         <li class="bottom-nav-item"><a href="">Tin tức</a></li>
                         <li class="bottom-nav-item"><a href="">Liên hệ</a></li>
+                        <li class="account-setting"></li>
                     </ul>
                 </div>
             </div>
@@ -276,6 +278,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
     <script th:src = "@{/js/main.js}"></script>
-
+    <script th:inline ="javascript">        
+    </script>
 </body>
 </html>
