--- a/src/main/resources/templates/client/checkout.html
+++ b/src/main/resources/templates/client/checkout.html
@@ -50,8 +50,8 @@
                 <div class="checkout-sidebar">
                     <div class="checkout-content">
                         <h3>ĐƠN HÀNG CỦA BẠN</h3>
-                    <table class="table table-responsive w-100 d-block d-md-table">
-                        <thead>
+                    <table class="table table-responsive w-100 d-block d-md-table" th:if = "${cart != null}">
+                        <thead >
                             <tr>
                                 <th>Sản phẩm</th>
                                 <th>Tổng</th>
@@ -124,6 +124,12 @@
                 contentType: "application/json; charset=utf-8",
                 success: function(data){
                     toastr.success("Hoàn thành thanh toán");
+                    window.location.href = "/success";
+                },
+                statusCode:{
+                    405 : function(){
+                        toastr.error("Bạn chưa đăng nhập");
+                    }
                 }
             })
         })
