--- a/src/main/resources/templates/client/index.html
+++ b/src/main/resources/templates/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Converse</title>
     <link th:replace = "fragments/layout::link">
     <link rel="stylesheet" th:href="@{/css/home.css}">    
   </head>
@@ -76,32 +76,60 @@
       <div class="container">
         <div class="product-title">
           <ul class="nav nav-tabs" id="myTab" role="tablist">
-              <li class="nav-item"><button class="nav-link active" data-bs-toggle="tab" data-bs-target="#new-product" >Sản phẩm mới</button></li>
-              <li class="nav-item"><button class="nav-link" data-bs-toggle="tab" data-bs-target="#best-sell-product">Sản phẩm bán chạy</button></li>
-              <li class="nav-item"><button class="nav-link" data-bs-toggle="tab" data-bs-target="#popular-product">Sản phẩm phổ biến</button></li>
+              <li class="nav-item"><button class="nav-link active" data-toggle="tab" href = "#new-product" >Sản phẩm mới</button></li>
+              <li class="nav-item"><button class="nav-link" data-toggle="tab" href = "#best-sell-product" >Sản phẩm bán chạy</button></li>
+              <li class="nav-item"><button class="nav-link" data-toggle="tab" href = "#popular-product">Sản phẩm phổ biến</button></li>
           </ul>
         </div>
         <div class="slider-product">
           <div class="tab-content">
-            <div class="tab-pane fade show active" id="new-product">
+            <div class="tab-pane fade show active" id="new-product" role="tabpanel">
               <div class="owl-carousel">
-                <div class="product-block">
-                  <div class="product-image">
-                    <a href="#"><img th:src="@{/image/product1.jpg}" alt=""></a>
+                <div class="product-block" th:each = "product : ${listProduct}">
+                  <div class="product-image" th:each = "image,i : ${product.images}" th:data-id = "${product.id}">
+                    <div th:if = "${i.first}"><a th:href="@{/product/{id}(id = ${product.id})}"><img th:src="*{'data:image/jpeg;base64,' + {image.data}}" alt="" ></a></div>
+                    <div th:if = "${i.first} == false"><a href=""><img th:src="*{'data:image/jpeg;base64,' + {image.data}}" alt=""  hidden></a></div>
                   </div>
                   <div class="product-content">
-                    <div class="product-name"><a href="#">Chuck Taylor Classic</a></div>
-                    <div class="product-price">1,250,000 <span>₫</span></div>
-                    <div class="add-to-cart-button"><button>Thêm vào giỏ</button></div>
+                    <div class="product-id"  th:data-id = "${product.id}" hidden name = "product-id"></div>
+                    <div class="product-name"><a th:href="@{/product/{id}(id = ${product.id})}" th:text = "${product.name}"></a></div>
+                    <div class="product-price" th:text = "${product.price} + ₫"><span></span></div>
+                    <div class="add-to-cart-button"><button onclick="productDetail(this)" th:data-id = "${product.id}">Thêm vào giỏ</button></div>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="tab-pane fade" id="best-sell-product">
-              2
+            <div class="tab-pane fade" id="best-sell-product" role="tabpanel">
+              <div class="owl-carousel">
+                <div class="product-block" th:each = "product : ${listProductByCost}">
+                  <div class="product-image" th:each = "image,i : ${product.images}" th:data-id = "${product.id}">
+                    <div th:if = "${i.first}"><a th:href="@{/product/{id}(id = ${product.id})}"><img th:src="*{'data:image/jpeg;base64,' + {image.data}}" alt="" ></a></div>
+                    <div th:if = "${i.first} == false"><a href=""><img th:src="*{'data:image/jpeg;base64,' + {image.data}}" alt=""  hidden></a></div>
+                  </div>
+                  <div class="product-content">
+                    <div class="product-id"  th:data-id = "${product.id}" hidden name = "product-id"></div>
+                    <div class="product-name"><a th:href="@{/product/{id}(id = ${product.id})}" th:text = "${product.name}"></a></div>
+                    <div class="product-price" th:text = "${product.price} + ₫"><span></span></div>
+                    <div class="add-to-cart-button"><button onclick="productDetail(this)" th:data-id = "${product.id}">Thêm vào giỏ</button></div>
+                  </div>
+                </div>
+              </div>
             </div>
-            <div class="tab-pane fade" id="popular-product">
-              3
+            <div class="tab-pane fade" id="popular-product" role="tabpanel">
+              <div class="owl-carousel">
+                <div class="product-block" th:each = "product : ${listProductByCategory2}">
+                  <div class="product-image" th:each = "image,i : ${product.images}" th:data-id = "${product.id}">
+                    <div th:if = "${i.first}"><a th:href="@{/product/{id}(id = ${product.id})}"><img th:src="*{'data:image/jpeg;base64,' + {image.data}}" alt="" ></a></div>
+                    <div th:if = "${i.first} == false"><a href=""><img th:src="*{'data:image/jpeg;base64,' + {image.data}}" alt=""  hidden></a></div>
+                  </div>
+                  <div class="product-content">
+                    <div class="product-id"  th:data-id = "${product.id}" hidden name = "product-id"></div>
+                    <div class="product-name"><a th:href="@{/product/{id}(id = ${product.id})}" th:text = "${product.name}"></a></div>
+                    <div class="product-price" th:text = "${product.price} + ₫"><span></span></div>
+                    <div class="add-to-cart-button"><button onclick="productDetail(this)" th:data-id = "${product.id}">Thêm vào giỏ</button></div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -114,7 +142,7 @@
           <h3>PHỤ KIỆN KHÁC</h3>
         </div>
         <div class="list-product">
-          <div class="product-block" th:each = "product : ${listProduct}">
+          <div class="product-block" th:each = "product : ${listProductCategory}">
             <div class="product-image" th:each = "image,i : ${product.images}" th:data-id = "${product.id}">
               <div th:if = "${i.first}"><a th:href="@{/product/{id}(id = ${product.id})}"><img th:src="*{'data:image/jpeg;base64,' + {image.data}}" alt="" ></a></div>
               <div th:if = "${i.first} == false"><a href=""><img th:src="*{'data:image/jpeg;base64,' + {image.data}}" alt=""  hidden></a></div>
@@ -153,14 +181,16 @@
           <h3>Sản phẩm giảm giá</h3>
         </div>
         <div class="list-product">
-          <div class="product-block">
-            <div class="product-image">
-              <a href="#"><img th:src="@{/image/product1.jpg}" alt=""></a>
+          <div class="product-block" th:each = "product : ${listProduct}">
+            <div class="product-image" th:each = "image,i : ${product.images}" th:data-id = "${product.id}">
+              <div th:if = "${i.first}"><a th:href="@{/product/{id}(id = ${product.id})}"><img th:src="*{'data:image/jpeg;base64,' + {image.data}}" alt="" ></a></div>
+              <div th:if = "${i.first} == false"><a href=""><img th:src="*{'data:image/jpeg;base64,' + {image.data}}" alt=""  hidden></a></div>
             </div>
             <div class="product-content">
-              <div class="product-name"><a href="#">Chuck Taylor Classic</a></div>
-              <div class="product-price">1,250,000 <span>₫</span></div>
-              <div class="add-to-cart-button"><button>Thêm vào giỏ</button></div>
+              <div class="product-id"  th:data-id = "${product.id}" hidden name = "product-id"></div>
+              <div class="product-name"><a th:href="@{/product/{id}(id = ${product.id})}" th:text = "${product.name}"></a></div>
+              <div class="product-price" th:text = "${product.price} + ₫"><span></span></div>
+              <div class="add-to-cart-button"><button onclick="productDetail(this)" th:data-id = "${product.id}">Thêm vào giỏ</button></div>
             </div>
           </div>
         </div>
